# Vehicle-Insurance-Machine-Learning-Pipeline

./: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  app.py  demo.py  pyproject.toml  template.py
.github/workflows/: aws.yaml
config/: schema.yaml
notebook/: exp-notebook.ipynb  mogoDB_demo.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_manager.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
