[project]
name = "src"
version = "0.0.1"
description = "An MLOps model for productionising vehicle insurance prediction models"
authors = [{name = "Utkarsh Dev", email = "utkarshdev047@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}